--- a/MediaServer/Web.config
+++ b/MediaServer/Web.config
@@ -7,19 +7,27 @@
   <connectionStrings>
     <add name="connMediaServerDB" connectionString="Data Source=(localdb)\MSSQLLocalDB;      AttachDbFilename=|DataDirectory|\MediaServerDB.mdf;        Initial Catalog=MediaServerDB.mdf; Integrated Security=True;Connect Timeout=30;Encrypt=False;       TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
   </connectionStrings>
-  <appSettings></appSettings>
-  <system.web>
-    <compilation debug="true" targetFramework="4.6.1" />
+  <appSettings>
+    <add key="ffmpeg:ExeLocation" value="FFMPEG/ffmpeg.exe" />
+  </appSettings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.8" />
+      </system.Web>
+  -->
+  <system.web>
+    <compilation debug="true" targetFramework="4.8" />
     <!-- =========================IN KILOBYTES============================ -->
     <httpRuntime targetFramework="4.6.1" maxRequestLength="4294967" />
   </system.web>
-  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
@@ -42,12 +50,6 @@
     </compilers>
   </system.codedom>
   <system.webServer>
-    <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
-      <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
     <modules>
       <!-- Adding Authentication http module -->
       <add name="BasicAuthHttpModule" type="MediaServer.Modules.BasicAuthHttpModule, MediaServer" />
@@ -60,7 +62,11 @@
         <requestLimits maxAllowedContentLength="4294967295" />
       </requestFiltering>
     </security>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
   </system.webServer>
 </configuration>
-
-
